# superbryn

./: .env.example  .gitignore  README.md  agent.py  db.py  problem_statement.md  pyproject.toml  tools.py
backend/: .dockerignore  .env.example  Dockerfile  agent.py  api.py  db.py  pyproject.toml  start.sh  tools.py
frontend/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AvatarDisplay.tsx  ChatPanel.tsx  Controls.tsx  SummaryPanel.tsx
frontend/src/hooks/: useCallSummary.ts  useToolCalls.ts  useTranscript.ts
frontend/src/lib/: api.ts  types.ts
